dev-env/it-tools/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: it-tools
  ports:
    - name: it-tools
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  selector:
    matchLabels:
      app: it-tools
  replicas: 1
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      automountServiceAccountToken: false
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.10.22-7ca5933
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 256Gi
          ports:
            - containerPort: 80
